bynkc/tests/fixtures/negative/269_bytes_map_key/input.bynk
commons bad

-- v0.110 (ADR 0142 D7): `Bytes` is equatable but not value-keyable, so it
-- cannot be a `Map` key. Key on `toBase64()` (a `String`) instead.

fn count(m: Map[Bytes, Int]) -> Int {
  m.length()
}
